tried correcting issue on iphone

--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -71,4 +71,10 @@ This animation is used in hamburguer.
 } 
 
 
+//this css class will prevent zooming when the user presses and scrolls down in the edge browser on iOS
+.no-zoom-when-scroll{
+  touch-action: manipulation; /* Apply touch-action property to the body or root element */
+  -ms-touch-action: manipulation; /* Apply touch-action property to a specific element for Edge browser */
+}
+
 
